--- a/pom.xml
+++ b/pom.xml
@@ -25,16 +25,16 @@
             <artifactId>telegrambots</artifactId>
             <version>${telegram-bots}</version>
         </dependency>
- <!--       <dependency>
-        <groupId>org.slf4j</groupId>
-        <artifactId>slf4j-api</artifactId>
-        &lt;!&ndash;<version>1.7.5</version>&ndash;&gt;
-    </dependency>
-    <dependency>
-        <groupId>org.slf4j</groupId>
-        <artifactId>slf4j-log4j12</artifactId>
-       &lt;!&ndash; <version>1.7.5</version>&ndash;&gt;
-    </dependency>-->
+        <!--       <dependency>
+               <groupId>org.slf4j</groupId>
+               <artifactId>slf4j-api</artifactId>
+               &lt;!&ndash;<version>1.7.5</version>&ndash;&gt;
+           </dependency>
+           <dependency>
+               <groupId>org.slf4j</groupId>
+               <artifactId>slf4j-log4j12</artifactId>
+              &lt;!&ndash; <version>1.7.5</version>&ndash;&gt;
+           </dependency>-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
@@ -46,7 +46,7 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-           <!-- <version>1.18.30</version>-->
+            <!-- <version>1.18.30</version>-->
         </dependency>
     </dependencies>
 
@@ -57,6 +57,7 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.10.1</version>
                 <configuration>
+                    <executable>true</executable>
                     <source>${java.version}</source>
                     <target>${java.version}</target>
                 </configuration>
