--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,10 @@
-bot.name = Helping_LingvoBot_bot
-bot.token = 7058892448:AAGo3YN9XSsBdegMPRr0xsRJeCn3nptMbBQ
+bot.name=Helping_LingvoBot_bot
+bot.token=7058892448:AAGo3YN9XSsBdegMPRr0xsRJeCn3nptMbBQ
+#db related settings
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/tg-bot
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.show-sql=true
