--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 bot.name=Helping_LingvoBot_bot
 bot.token=7058892448:AAGo3YN9XSsBdegMPRr0xsRJeCn3nptMbBQ
+bot.owner=582991419
 #db related settings
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/tg-bot
