add function to send message for all users every day from db

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 bot.name=Helping_LingvoBot_bot
 bot.token=7058892448:AAGo3YN9XSsBdegMPRr0xsRJeCn3nptMbBQ
 bot.owner=582991419
+
+cron.scheduler=0 0 0 * * *
 #db related settings
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/tg-bot
